[package]
name = "reloader"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
cloudevents-sdk = { version = "0.9.0", features = ["axum"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.117"
google-cloud-run-v2 = "1.2.1"
anyhow = "1.0.100"
futures = "0.3.31"
